# parallel_training

./: .gitignore  LICENSE  README.md  eq_parallel.py  main.py  pyproject.toml  temp.py  testing.ipynb  testing_wrapper.ipynb  train.py
datasets/: parity.py
models/: mlp.py  transformer.py
nnx/: new_parallel.py  testing.ipynb
nnx/models/: mlp.py  transformer.py
