[project]
name = "parallel-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.13.2",
    "flax>=0.12.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jax-tqdm>=0.4.0",
    "jax[cuda]>=0.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "pip>=25.2",
    "tqdm>=4.67.1",
]
